Change custom element state in documents without browsing context

The spec was changed to set the custom element state to "undefined"
even if the document does not have browsing context[1].

[1] https://github.com/whatwg/dom/pull/291

BUG=635402

Review-Url: https://codereview.chromium.org/2252003002
Cr-Commit-Position: refs/heads/master@{#412975}

Former-commit-id: 2a60d7660f68e0bae04400346c28604b144f9016